[project]
name = "monopigi"
version = "0.1.6"
description = "Python SDK and CLI for the Monopigi Greek Government Data API"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Monopigi", email = "info@monopigi.com"}]
keywords = ["greek", "government", "data", "api", "procurement", "open-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "textual>=3.0",
]

[project.optional-dependencies]
df = ["polars>=1.0"]
all = ["polars>=1.0"]

[project.scripts]
monopigi = "monopigi.cli:app"

[project.urls]
Homepage = "https://monopigi.com"
Documentation = "https://monopigi.com/docs"
Repository = "https://github.com/monopigi/monopigi"
"API Reference" = "https://api.monopigi.com/docs"
Changelog = "https://github.com/monopigi/monopigi/releases"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
